--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ VITE_RAZORPAY_KEY_ID=rzp_live_OW2CebP4Dp3bUA
 VITE_RAZORPAY_KEY_SECRET=0rBdQvvsp5KbQDAfaOrl9b73
 RAZORPAY_KEY_ID=zp_live_OW2CebP4Dp3bUA
 RAZORPAY_KEY_SECRET=0rBdQvvsp5KbQDAfaOrl9b73
+RAZORPAY_WEBHOOK_SECRET=azura-cse-2025-payment
 
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
